[package]
name = "restaurant_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
hyper = "1.5.2"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.5.2"
